이미지 추가

--- a/today_i_learned_(maybe...)/230718.md
+++ b/today_i_learned_(maybe...)/230718.md
@@ -9,8 +9,8 @@
 
 
 ## git 에러
+![error1](./img/230718_error1.png)
 깃 푸시를 하는 과정에서 처음 보는 에러를 만났다. 나중에 정리해서 옮길 겸 기록.
-
 ### 이유
 깃허브 저장소에 설명란에 적어둔 게 README.md에 나오는데 이게 깃을 사용하는 폴더의 README.md랑 내용이 달라 충돌된다고 알려주는 것.
 ### 해결
@@ -18,6 +18,7 @@
 - 저장소를 당겨와서 싱크를 맞추기 `git pull`
 - 강제로 푸시해서 깃헙 저장소를 덮어버리기 `git push origin +<저장소 이름>`
 
+![error2](./img/230718_error2.png)
 밀어버리려고 푸시했는데 원격 저장소를 연결을 안 해놨다...
 
 `git remote -v`로 원격 저장소 확인하고  
