블로그 추가

--- a/today_i_learned_(maybe...)/230718.md
+++ b/today_i_learned_(maybe...)/230718.md
@@ -5,7 +5,9 @@
 ```javascript
 (...Obj)
 ```
-처음 보고 당황했는데 알면 알수록 편하고 신기한 녀석. <a href="https://noritersand.github.io/javascript/javascript-전개-구문-spread-syntax/" target="_blank">잘 정리된 깃헙 블로그</a>
+처음 보고 당황했는데 알면 알수록 편하고 신기한 녀석.
+- <a href="https://noritersand.github.io/javascript/javascript-전개-구문-spread-syntax/" target="_blank">잘 정리된 깃헙 블로그1</a>
+- <a href="https://dinn.github.io/javascript/js-dotdotdot/" target="_blank">깃헙 블로그2</a>
 
 
 ## git 에러
@@ -18,7 +20,7 @@
 - 저장소를 당겨와서 싱크를 맞추기 `git pull`
 - 강제로 푸시해서 깃헙 저장소를 덮어버리기 `git push origin +<저장소 이름>`
 
-![error2](./img/230718_error2.png)
+![error2](./img/230718_error2.png)  
 밀어버리려고 푸시했는데 원격 저장소를 연결을 안 해놨다...
 
 `git remote -v`로 원격 저장소 확인하고  
