--- a/today_i_learned_(maybe...)/230719.md
+++ b/today_i_learned_(maybe...)/230719.md
@@ -1,5 +1,7 @@
-후기 좋은 부트캠프들이 모두 코테를 봐서 클론 코딩으로 html과 css 기초를 다진 후 자바스크립트에 익숙해질 겸 코딩테스트를 계속 연습 중인데
-하루하루 내가 얼마나 모르는지 더 깨닫고 있다...
+후기 좋은 부트캠프들이 모두 코테를 봐서 클론 코딩으로 html과 css 기초를 다진 후 자바스크립트에 익숙해질 겸 코딩테스트를 계속 연습 중인데. 하루하루 내가 얼마나 모르는지 더 깨닫고 있다...
 이전에 배우고 써먹은 메소드로 런타임 오류 쳐맞다가 풀이를 찾아보면 이전에 몰랐던 메소드가 내가 써내려간 코드보다 효율적으로
 그나마 문제 접근 방법 자체는 비슷하다는 거에 위안을 삼는다...
 코테 통과할 수 있을까...
+
+
+<a href="../codingTest/test.js">백준2675</a>를 푸는데 
