오늘도 알고리즘에게 패배했다..

--- a/today_i_learned_(maybe...)/230802.md
+++ b/today_i_learned_(maybe...)/230802.md
@@ -1,14 +1,17 @@
-이사 준비로 정신 없는 와중에 틈틈이 알고리즘을 알아보고 코테 문제를 연습했다.  
-정렬 알고리즘의 종류를 열심히 봤는데 결국 sort() 함수만 쓰게돼서 뭔가 시간을 낭비한 느낌이다...  
-그리디 알고리즘이 분명 쉽다고 했는데 난이도 조금만 올라가면  
-메소드들을 쓰던 방식으로만 쓰고 자유자재로 쓰지 못한다.  
-아직 프로그래머스 레벨1도 버겁다. 코테를 풀수록 좌절감이 쌓이는데 어쩌다 한 문제 풀면 언제 그랬냐듯이 좌절감이 눈 녹듯이 사라진다..  
-코테 문제만 연습하니까 쓸 것도 없고 너무 재미 없어서, 웹 만드는 공부도 진도를 같이 풀어야겠다.  
-
-배열 선언할 때 자꾸 이상하게 짜 런타임 오류를 뿜어내서 아예 외워야겠다.
+**bj1316 다시 풀어볼 것.**  
+아직도 집합 세트 사용이 너무 서투르다.  
+#### 배열 선언할 때 자꾸 이상하게 짜 런타임 오류를 뿜어내서 아예 외워야겠다.
 ```javascript
 for(let i = 1; i <= input[0]; i++) {
   let [x, y] = input[i].split(' ').map(Number);
   arr.push([x, y]);
 }
 ```
+
+프로그래머스는 문제를 풀고나면 다른 사람들의 풀이 방식을 살펴보고 배울 수 있어서 참 좋은 거 같다.  
+
+이사 준비로 정신 없는 와중에 틈틈이 알고리즘을 알아보고 코테 문제를 연습했다.  
+정렬 알고리즘의 종류를 열심히 봤는데 결국 sort() 함수만 쓰게돼서 뭔가 시간을 낭비한 느낌...  
+그리디 알고리즘이 분명 쉽다고 했는데 난이도 조금만 올라가면 메소드들을 쓰던 방식으로만 쓰고 자유자재로 쓰지 못한다.  
+아직 프로그래머스 레벨1도 버겁다. 코테를 풀수록 좌절감이 쌓이는데 어쩌다 한 문제 풀면 언제 그랬냐듯이 좌절감이 눈 녹듯이 사라진다..  
+코테 문제만 연습하니까 쓸 것도 없고 너무 재미 없어서, 웹 만드는 공부도 진도를 같이 풀어야겠다.  
