--- a/today_i_learned_(maybe...)/230809.md
+++ b/today_i_learned_(maybe...)/230809.md
@@ -1,16 +1,28 @@
 # SW021 day-1
 
-
-
+기존에 몰랐다가 알게 된 것들을 따로 기록
 ```css
-:nth-child(2n)
+:nth-child(2n) {}
 /* 짝수 자식 요소 선택하기 */
-:nth-child(2n+1)
+:nth-child(2n+1) {}
 /* 홀수 자식 요소 선택하기 */
-
-box-sizing: border-box;
-/* width 같은 사이즈가 콘텐트만 적용되고 패딩, 보더 사이즈 등을 따로 합쳐서 박스 사이즈를 계산하는 걸
-   width가 실제 박스 사이즈에 적용되도록 도와주는 명령어*/
-
+:nth-last-child(2n+1) {}
+/* 마지막 자식 요소 중 홀수 번째를 선택 */
+:first-of-type {}
+/* nth-child와 다르게 처음 등장하는 요소만 선택 */
+:last-of-type {}
 ```
+
 ![border-box](./img/border-box.png)
+```css
+box-sizing: border-box;
+/* width 같은 사이즈가 콘텐트만 적용되고 패딩, 보더 사이즈 등을 따로 합쳐서 박스 사이즈를 계산하는 걸 width가 실제 박스 사이즈에 적용되도록 도와주는 명령어 */
+```
+클론 코딩 위주로 학습해서 왜 쓰는지 모르거나 잊어버린 경우가 허다한데 border box가 바로 그런 예... 이번에 잘 기억해놔야겠다.
+
+코드스테이츠와 성신여대에서 진행하는 SW021의 첫 시간.  
+html과 css를 공부하는 시간을 가졌다. 이미 아는 내용도 있었지만 강의 내용을 보다보니 자주 안 써서 잊거나 미처 몰랐던 내용도 있서 복습하는 시간을 가질 수 있어 좋았다.
+
+웹 개발이 경험이 수강생마다 너무 상이하여 강의를 담당한 분이 잠깐 체크를 했는데 기간이 6개월 정도 되는 다른 부트캠프를 수료하고 오신 분도 있고 이미 리액트를 경험하신 분도 있었다. ㄷㄷ...
+
+이미 포토샵으로 편하게 디자인할 수 있듯이 html과 css로 편하게 디자인과 레이아웃할 수 있을 정도로 숙련해야겠다는 생각이 드는 하루였다.
