--- a/today_i_learned_(maybe...)/230810.md
+++ b/today_i_learned_(maybe...)/230810.md
@@ -29,3 +29,20 @@ function solution(nums) {
     }
 }
 ```
+### 핸드폰 번호 가리기
+쉬운 문제였으나 더 깔끔한 풀이 참고차 기록.
+```javascript
+// 내가 푼 코드
+function solution(phone_number) {
+    let arr = phone_number.split('');
+    arr.splice(0, phone_number.length-4, '*'.repeat(phone_number.length-4));
+    return arr.join('');
+}
+```
+```javascript
+// 다른 사람의 풀이 배열을 굳이 안 만들어도 됐다.
+function hide_numbers(s){
+    var result = "*".repeat(s.length - 4) + s.slice(-4);
+    return result;
+  }
+```
