SW021 마지막 학습날 기록

--- a/today_i_learned_(maybe...)/230825.md
+++ b/today_i_learned_(maybe...)/230825.md
@@ -1,3 +1,7 @@
 # SW021 day-???
 
 정말 폭풍 같은 한 주를 보냈다...
+
+리액트 진도가 나가면서 정말 머리에 억지로 우겨놓고 있다. 왜 리액트가 등장하자 프론트엔드 개발에서 가장 높은 점유율을 갖게됐는지 써보자 마자 알게됐다. html, css, js를 페이지 별로 나누는 정통적인 방식의 웹개발보다 기능 단위로 컴포넌트를 분리해 jsx 안에서 html까지 작성하니 확실히 엄청 효율적이라 느껴졌다.
+
+페어코딩으로 영화 추천 사이트를 리액트로 구현 중인데 Replit을 쓰게 되면서
