짧게 학습 추가

--- a/today_i_learned_(maybe...)/230830.md
+++ b/today_i_learned_(maybe...)/230830.md
@@ -6,14 +6,28 @@ json 파일을 js 형태로 바꿔주는 메소드를 써줘야한다.
 모든 데이터 파일 형태가 json이 아닐 수 있어서 조건문으로 xml 등 다른 형식은 또 따로 처리해줘야 한다.
 axios는 이 모든 걸 자동으로! 코드가 현저히 짧아진다. 개꿀!
 
-### 이번 삽질들...
+## 이번 삽질들...
 
 API 요청하고 받는 과정을 거쳐 useNavigate 훅을 처음 써봤다. 다양한 훅이 있고 공부할 게 많다는 걸 또 새삼 느꼈다...  
 
-useEffect와 상태 끌어올리기 이해도가 부족해 간단하게 해결할 수 있는 구현에서 삽질을 했다.  
+1. api로 받은 객체 데이터에 배열이 껴있었는데 그걸 map으로 돌리면서 문제가 생겼다. 모두 콘솔 에러창을 대충 봐서 놓치는 바람에 간단하게 고칠 수 있는 에러에 엄청난 시간을 허비했다. 끈질기게 콘솔 에러 창을 보는 습관을 들여야겠다.  
 
-api로 받은 객체 데이터에 배열이 껴있었는데 그걸 map으로 돌리면서 문제가 생겼다. 모두 콘솔 에러창을 대충 봐서 놓치는 바람에 간단하게 고칠 수 있는 에러에 엄청난 시간을 허비했다. 끈질기게 콘솔 에러 창을 보는 습관을 들여야겠다.  
+- html 코드를 한 줄 씩 주석 처리해가며 문제가 있는 부분을 찾았다. 문제 있는 부분의 코드에서 받는 데이터를 콘솔에 출력해보니 데이터에 배열 형식이 섞여있어서 우리가 지정한 방식으로는 데이터를 정상적으로 받을 수 없다는 걸 깨닫고 배열 부분이 딱히 필요한 데이터가 아니라 데이터를 받을 때 배열 부분을 제외하고 받을 수 있도록 코드를 수정했다.
 
 급하게 배우다 보니 디버깅하는 실력이 너무 떨어진다.  
 
-props는 몇 번 써보다 보니 모두 익숙해졌는데 params를 모두 이해하기 어려워했다. 솔직히 아직도 어렵다... 특히 Link를 통해 /:id 형식으로 url을 타고 데이터가 옮겨가는 경우 기능 컴포넌트와 메인 컴포넌트에서 라우트 되는 흐름을 모두 이해하는 걸 어려워했다. 복습 또 복습... 연습 또 연습...
+2. props는 몇 번 써보다 보니 모두 익숙해졌는데 params를 모두 이해하기 어려워했다. 솔직히 아직도 어렵다... 특히 Link를 통해 /:id 형식으로 url을 타고 데이터가 옮겨가는 경우 기능 컴포넌트와 메인 컴포넌트에서 라우트 되는 흐름을 모두 이해하는 걸 어려워했다. 복습 또 복습... 연습 또 연습...
+
+3. useEffect와 상태 끌어올리기 이해도가 부족해 간단하게 해결할 수 있는 구현에서 삽질을 했다.  
+
+- useEffect 만으로 토큰을 획득하면 로그인과 로그아웃 상태가 변하는 걸 구현하려고 했다. 첫 렌더링 이후 토큰을 획득해도 로그인 상태가 변하지 않아 어떻게 해야 원하는 타이밍에 렌더링을 시킬 수 있을 고민했지만 나중에야 이게 틀린 방법이란 걸 운도님과 은혜님이 알려주셨다. 그래서 useEffect와 로그인 상태를 변할 수 있는 함수를 메인 컴포넌트로 끌어올리고 상태를 변경하는 함수를 로그인 기능 컴포넌트로 내려줬다. API로 토큰을 받는 게 성공할 때 로그인 상태를 true로 변경하는 함수를 실행 시키고, 로그아웃 버튼을 누르면 토큰을 지우고 로그인 상태를 false로 변경하는 함수를 실행 시키도록 수정하자 제대로 작동하기 시작했다.
+
+리액트 18.2.0 버전 라이브러리를 설치해 리액트의 Hook을 js로 컨트롤 하며 html을 담은 jsx 컴포넌트가 마운트 되는 형태로 웹을 구현하고 css로 스타일을 입혔습니다.
+react router를 설치해 여러 Router 훅들을 이용해 페이지 컴포넌트가 매끄럽게 바뀌도록 했습니다.
+axios를 설치해 fetch 대신 사용해 api를 사용할 때 효율적으로 데이터를 요청하고 받도록 했습니다.
+
+
+# C#
+### 함수, 메소드, 클래스: function, method, class
+모두 함수 아니야? 왜 헷갈리게 다 다르게 부르는 거야 생각했다.  
+함수를 객체 지향 프로그래밍에선 메소드라고 부른다. 객체에선 모든 것이 객체고, 함수도 객체로 존재한다.
