--- a/today_i_learned_(maybe...)/230831.md
+++ b/today_i_learned_(maybe...)/230831.md
@@ -1,6 +1,6 @@
 # 어쩌다 마주친 그대
 
-챗gpt한테 코드 물어보다가 모르는 메소드가 종종 튀어나와서 검색 좀 해봤다.
+최근 리액트 공부하면서 챗gpt한테 코드 물어보다가 모르는 메소드가 종종 튀어나와서 검색 좀 해봤다.
 
 ### <code>Event.preventDefault()</code>
 리액트를 공부하다가 만난 메소드. a 태그의 링크 이동, 체크박스 체크하기 같은 요소의 기본 동작을 막아준다고 한다.
