짧은 배움들 기록

--- a/today_i_learned_(maybe...)/230730.md
+++ b/today_i_learned_(maybe...)/230730.md
@@ -1,8 +1,6 @@
-
-
 ```javascript
 // 배열 초기화 자주 쓰임
-let arr = [5, 4, 7, 1, 8]
+let arr = [5, 4, 7, 1, 8];
 // 직접 초기화
 let arr = new Array(5).fill(0);
 // 길이가 5이고 배열 속 값은 모두 0으로 초기화
