--- a/today_i_learned_(maybe...)/230809.md
+++ b/today_i_learned_(maybe...)/230809.md
@@ -1,23 +1,31 @@
 # SW021 day-1
 
 기존에 몰랐다가 알게 된 것들을 따로 기록
+
 ```css
-:nth-child(2n) {}
+:nth-child(2n) {
+}
 /* 짝수 자식 요소 선택하기 */
-:nth-child(2n+1) {}
+:nth-child(2n + 1) {
+}
 /* 홀수 자식 요소 선택하기 */
-:nth-last-child(2n+1) {}
+:nth-last-child(2n + 1) {
+}
 /* 마지막 자식 요소 중 홀수 번째를 선택 */
-:first-of-type {}
+:first-of-type {
+}
 /* nth-child와 다르게 처음 등장하는 요소만 선택 */
-:last-of-type {}
+:last-of-type {
+}
 ```
 
 ![border-box](./img/border-box.png)
+
 ```css
 box-sizing: border-box;
 /* width 같은 사이즈가 콘텐트만 적용되고 패딩, 보더 사이즈 등을 따로 합쳐서 박스 사이즈를 계산하는 걸 width가 실제 박스 사이즈에 적용되도록 도와주는 명령어 */
 ```
+
 클론 코딩 위주로 학습해서 왜 쓰는지 모르거나 잊어버린 경우가 허다한데 border box가 바로 그런 예... 이번에 잘 기억해놔야겠다.
 
 코드스테이츠와 성신여대에서 진행하는 SW021의 첫 시간.  
