--- a/today_i_learned_(maybe...)/230902.md
+++ b/today_i_learned_(maybe...)/230902.md
@@ -4,10 +4,9 @@ object 타입과 객체 object는 다르다.
 
 C#은 전역 변수란 개념이 없다.
 
-var로 변수 선언 시 선언한 데이터에 맞게 알아서 타입을 골라서 메모리에 저장해준다.
+C#에서 var로 변수 선언 시 선언한 데이터에 맞게 알아서 타입을 골라서 메모리에 저장해준다.
 
 설명하듯이 var로 선언해도 전역 변수로 저장하지 않고 코드 블럭 안에서만 존재한다.
-
 
 ### object 타입 데이터와 var로 선언한 데이터와 다른 점.
 
