주말 학습 정리

--- a/today_i_learned_(maybe...)/230802.md
+++ b/today_i_learned_(maybe...)/230802.md
@@ -10,7 +10,7 @@ for (let i = 1; i <= input[0]; i++) {
 }
 ```
 
-프로그래머스는 문제를 풀고나면 다른 사람들의 풀이 방식을 살펴보고 배울 수 있어서 참 좋은 거 같다.
+프로그래머스는 문제를 풀고나면 다른 사람들의 풀이 방식을 살펴보고 배울 수 있어서 참 좋은 것 같다.
 
 이사 준비로 정신 없는 와중에 틈틈이 알고리즘을 알아보고 코테 문제를 연습했다.  
 정렬 알고리즘의 종류를 열심히 봤는데 결국 sort() 함수만 쓰게돼서 뭔가 시간을 낭비한 느낌...  
