--- a/today_i_learned_(maybe...)/230916.md
+++ b/today_i_learned_(maybe...)/230916.md
@@ -14,4 +14,5 @@ img 태그는 왜 텍스트와 똑같이 인라인 요소일까?
 
 싱글톤이라는 키워드를 주워들었으나 아무리 봐도 이해가 되지 않는다. 직접 써보면서 익혀나가는 걸로...
 
-### 개발 입문자들의 흔한 실수
+### 개발 입문자의 흔한 실수 정리
+
