TIL: c#, jQuery 여러가지

--- a/today_i_learned_(maybe...)/230925.md
+++ b/today_i_learned_(maybe...)/230925.md
@@ -2,4 +2,33 @@
 
 캐릭터 움직임이 Update에서 구현됐다면 카메라 무브는 LateUpdat에서 구현해야 충돌하지 않는다.
 
+# C#
 
+### 싱글톤
+
+생성되는 많은 게임 요소에 스크립트를 일일이 달아줄 수 없으니까
+인스턴스를 하나의 매니저로 관리하기 위해서
+
+### 코루틴
+
+비동기
+
+##
+
+유니티 직무교육이 끝나간다.
+웹개발 부트캠프는 정말 다양하게 많은데, 게임개발 부트캠프는 정말 찾기 어려웠다.
+그러다 발견하게 된 신청했다.
+딜리셔스 게임즈 임직원 분들이 와서 교육을 진행했다. 유니티짱을 이용해서 도트 먹기 등 다양한 게임을 클론 코딩으로 만드는 연습을 했다. 유니티 전체를 훑으면서 유니티 엔진과 c#을 알아가는 커리큘럼으로 진행했다.
+
+알고있는 건 100인데 c#을 아예 써본 적 없는 교육생을 염두에 두고 교육을 진행하다보니 10 수준으로 가르치고 강의를 진행하는 느낌이었다.
+
+게임에 필요한 인공지능 기능
+
+유니티에 내가 모르는 클래스가 얼마나 많이 숨어있는지
+시작할 때 처음 C# 문법 기초만 알던
+
+##
+
+많은 언어에서 초기화하지 않은 변수를 못 쓰게 하는지 궁금했는데 변수 선언과 동시에 변수에는 쓰레기 데이터가 들어간다. 초기화하지 않으면 쓰레기 데이터를 쓰게되는 것. 그래서 아예 자바스크립트는 변수명만 선언할 수 없고 C#은 변수 선언을 할 수 있지만 초기화하지 않으면 사용할 수 없도록 만들었다.
+
+전부터 느낀 건데 결국 컴퓨터와 컴퓨터 언어 모두 사람이 사용하는 도구라서 사용자 관점에서 휴먼 에러를 줄이기 위해 고민한 흔적이 느껴진다.
