jQuery와 관련된 TIL

--- a/today_i_learned_(maybe...)/230925.md
+++ b/today_i_learned_(maybe...)/230925.md
@@ -16,11 +16,11 @@
 ##
 
 유니티 직무교육이 끝나간다.
-웹개발 부트캠프는 정말 다양하게 많은데, 게임개발 부트캠프는 정말 찾기 어려웠다.
-그러다 발견하게 된 신청했다.
-딜리셔스 게임즈 임직원 분들이 와서 교육을 진행했다. 유니티짱을 이용해서 도트 먹기 등 다양한 게임을 클론 코딩으로 만드는 연습을 했다. 유니티 전체를 훑으면서 유니티 엔진과 c#을 알아가는 커리큘럼으로 진행했다.
+웹개발 부트캠프는 정말 다양하게 많은데, 게임개발 부트캠프는 찾을 수 없을 정도로 정말 적다.
+그러다 발견하게 된 10주 캠프에 지원했다.
+딜리셔스 게임즈 임직원 분들이 교육을 진행했다. 유니티짱을 이용해서 도트 먹기 등 다양한 게임을 클론 코딩으로 만드는 연습을 했다. 유니티 전체를 훑으면서 유니티 엔진과 c#을 알아가는 커리큘럼으로 진행했다.
 
-알고있는 건 100인데 c#을 아예 써본 적 없는 교육생을 염두에 두고 교육을 진행하다보니 10 수준으로 가르치고 강의를 진행하는 느낌이었다.
+교육을 진행하는 분들의 능력치는 100인데 c#을 아예 써본 적 없는 사람까지 염두에 두고 교육을 진행하다보니 10 수준으로만 가르치고 강의를 진행하는 느낌이었다.
 
 게임에 필요한 인공지능 기능
 
