js study: prototype, object

--- a/today_i_learned_(maybe...)/231007.md
+++ b/today_i_learned_(maybe...)/231007.md
@@ -1,7 +1,23 @@
-js가 다루는 데이터는 모두 객체이다. 하나만 가져오는 거라도 객체로 준다.
+js가 다루는 데이터는 모두 객체다. 하나만 가져오는 거라도 객체로 준다.
+이걸 몰라서 캘린더를 만드는 연습을 할 때 삽질을 했다.
+
+---
 
 jQuery랑 부트스트랩을 학습했다.
 
+얼마나 많은 사람들이 jQuery 이제 안 쓰지 않냐고 물었으면 교육을 진행하는 릴리 리더가
+
+생각해보니 이전에도 언어나 툴을 제대로 사용하지 못 했으면 커뮤니티에서 본 글을 읽고 뭐는 안 좋고 뭐는 어떻고 하는 사람들을 본 적이 많다.
+
+정보는 오히려 독이 되는 것 같다.
+
+새로운 걸 마구 배우는 중이라 겁을 먹었는데 막상 사용해보니 DOM API보다 직관적이라는 생각이 들었다. 라이브러리 프레임워크 모두 다 시간이 지날수록 사람들이 사용하기 쉽게 만들어지고 있는 것 같다.
+
 ```js
-"selector".method();
+$("selector").method();
 ```
+
+언어를 알고 문법을 아는 거에서 그치지 않고
+문법, 메소드를 알고 모르는 것과 처음 사용하다보니 사용법에 익숙치 않아서 헤매는 것 모두 시간의 문제일 뿐이고, 결국 실제 문제를 맞닥뜨렸을 때 어떤 메소드를 사용해서 문제를 해결할 것이냐가 개발이 아닐까 싶다.
+
+훈련은 실전처럼 실전은 훈련처럼 군대 훈련소에서 봤던 문구가 또 떠올랐다...
